recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:19: error: ')' expected but ';' found.
snowSquare(levels, length);
                          ^